Listar TABLAS al 100% | NAIM

--- a/Comart/src/main/resources/templates/404.html
+++ b/Comart/src/main/resources/templates/404.html
@@ -81,9 +81,9 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Listar</h6>
-                        <a class="collapse-item" href="tables-usuarios.html">Usuarios</a>
-                        <a class="collapse-item" href="tables-categorias.html">Categorías</a>
-                        <a class="collapse-item" href="tables-productos.html">Productos</a>
+                        <a class="collapse-item" href="/listarUsuarios">Usuarios</a>
+                        <a class="collapse-item" href="/listarCategorias">Categorías</a>
+                        <a class="collapse-item" href="/listarProductos">Productos</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Crear:</h6>
                         <a class="collapse-item" href="registro-usuarios.html">Usuarios</a>
@@ -167,7 +167,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Comart ADMIN</span>
                                 <img class="img-profile rounded-circle"
                                     src="img/undraw_profile.svg">
                             </a>
