--- a/Comart/src/main/resources/templates/tables-productos.html
+++ b/Comart/src/main/resources/templates/tables-productos.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    
 
     <title>Comart - Tablas</title>
 
@@ -69,9 +70,9 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Listar</h6>
-                        <a class="collapse-item" href="tables-usuarios.html">Usuarios</a>
-                        <a class="collapse-item" href="tables-categorias.html">Categorías</a>
-                        <a class="collapse-item" href="tables-productos.html">Productos</a>
+                        <a class="collapse-item" href="/listarUsuarios">Usuarios</a>
+                        <a class="collapse-item" href="/listarCategorias">Categorías</a>
+                        <a class="collapse-item" href="/listarProductos">Productos</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Crear:</h6>
                         <a class="collapse-item" href="registro-usuarios.html">Usuarios</a>
@@ -158,7 +159,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Comart ADMIN</span>
                                 <img class="img-profile rounded-circle"
                                     src="img/undraw_profile.svg">
                             </a>
@@ -295,6 +296,9 @@
 
     <!-- Page level custom scripts -->
     <script src="js/demo/datatables-demo.js"></script>
+    
+    <!-- Page level custom scripts -->
+    <script src="https://cdn.datatables.net/plug-ins/1.11.3/i18n/es_es.json"></script>
 
 </body>
 
