--- a/Comart/src/main/resources/templates/registro-usuarios.html
+++ b/Comart/src/main/resources/templates/registro-usuarios.html
@@ -19,6 +19,9 @@
 
     <!-- Custom styles for this template -->
     <link th:href="@{/css/sb-admin-2.min.css}" href="css/sb-admin-2.min.css" rel="stylesheet">
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 
@@ -78,7 +81,7 @@
                         <a class="collapse-item" href="/listarProductos">Productos</a>
                       <div class="collapse-divider"></div>
                       <h6 class="collapse-header">Crear:</h6>
-                      <a class="collapse-item" href="registro-usuarios.html">Usuarios</a>
+                        <a class="collapse-item" href="/nuevoUsuario">Usuarios</a>
                       <a class="collapse-item" href="blank.html">Categorías</a>
                       <a class="collapse-item" href="blank.html">Productos</a>
                       <h6 class="collapse-header">Actualizar:</h6>
@@ -245,7 +248,7 @@
                                     <div class="form-group row">
                                       <label for="contraseña" class="col-4 col-form-label">Contraseña:</label> 
                                       <div class="col-8">
-                                        <input th:field="*{clave}" id="contraseña" name="contraseña" type="text" class="form-control">
+                                        <input th:field="*{clave}" id="contraseña" name="contraseña" type="password" class="form-control">
                                       </div>
                                     </div>
                                     <div class="form-group row">
