--- a/Comart/src/main/resources/templates/actualizar-producto.html
+++ b/Comart/src/main/resources/templates/actualizar-producto.html
@@ -66,7 +66,7 @@
 																	<i class="fa fa-address-card"></i>
 																</div>
 															</div>
-															<input th:field="*{IdProducto}" id="idProducto" type="number" class="form-control" required="required" placeholder="Ingresar ID del producto" maxlength="6">
+															<input th:field="*{IdProducto}" id="idProducto" type="number" class="form-control" required="required">
 														</div>
 													</div>
 												</div>
@@ -130,7 +130,7 @@
 												</div>
 												<div class="form-group row">
 													<div class="offset-4 col-8">
-														<button type="submit" class="btn btn-primary">REGISTRAR</button>
+														<button type="submit" class="btn btn-primary">ACTUALIZAR</button>
 													</div>
 												</div>-->
 											</form> 
