--- a/Comart/src/main/resources/templates/tables-productos.html
+++ b/Comart/src/main/resources/templates/tables-productos.html
@@ -51,7 +51,7 @@
 
                     <!-- Page Heading -->
                     <h1 class="h3 mb-2 text-gray-800">Tabla Productos</h1>
-                    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm float-right"><i
+                    <a th:href="@{/reportes/comart_producto}" target="_blank" class="btn btn-primary"><i
                         class="fas fa-download fa-sm text-white-50"></i> Generar reporte</a>
                     <p class="mb-4">Durante el desarrollo de este proyecto, nos hemos apoyado en la creación de tablas mediante el uso de <a target="_blank"
                             href="https://datatables.net">DataTables</a>.</p>
@@ -93,7 +93,7 @@
                                             <td th:text="${p.codCategoria}"></td>
                                             <td>
                                             	<a th:href="@{/editarProducto/}+${p.IdProducto}" type="button" class="btn btn-outline-primary"><i class="far fa-edit"></i></a>
-                                            	<a th:href="@{/eliminarProducto/}+${p.IdProducto}" type="button" class="btn btn-outline-primary"><i class="far fa-trash-alt"></i></a>
+                                            	<a th:onclick="eliminar([[${p.IdProducto}]])" type="button" class="btn btn-outline-primary"><i class="far fa-trash-alt"></i></a>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -146,14 +146,11 @@
     <!-- Page level custom scripts -->
     <script src="https://cdn.datatables.net/plug-ins/1.11.3/i18n/es_es.json"></script>
 	
-	<!-- CDN JQUERY -->
-	<script
-  src="https://code.jquery.com/jquery-3.6.0.js"
-  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-  crossorigin="anonymous"></script>
-	
-	<!-- sweetalert -->
+	<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<script src="js/funciones.js"></script>
+	
+	
 </body>
 
 </html>
