--- a/Comart/src/main/resources/reportes/comart_usuario.jrxml
+++ b/Comart/src/main/resources/reportes/comart_usuario.jrxml
@@ -63,7 +63,7 @@ FROM travel2021.usuario
 		<band height="80" splitType="Stretch">
 			<image>
 				<reportElement x="7" y="20" width="100" height="30" uuid="2363aac4-b08c-4cc5-9006-0272b2cd742d"/>
-				<imageExpression><![CDATA["C:/Users/Acer/Downloads/title.png"]]></imageExpression>
+				<imageExpression><![CDATA["/src/main/resources/static/img/title.png"]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement x="113" y="20" width="328" height="30" uuid="7f2d833c-e2db-4dc9-9aa5-3e3344fe5f30"/>
