--- a/Comart/src/main/resources/reportes/comart_producto.jrxml
+++ b/Comart/src/main/resources/reportes/comart_producto.jrxml
@@ -62,13 +62,13 @@ FROM travel2021.productos
 				</textElement>
 				<text><![CDATA[LISTADO DE PRODUCTOS]]></text>
 			</staticText>
-			<image>
-				<reportElement x="10" y="20" width="100" height="30" uuid="c1cab519-c888-4a4b-bde2-f3b7b4ddca96"/>
-				<imageExpression><![CDATA["/src/main/resources/static/img/title.png"]]></imageExpression>
-			</image>
 			<line>
 				<reportElement x="119" y="52" width="324" height="1" uuid="b98b2b60-5bfa-4f82-8940-ea339fbd2a31"/>
 			</line>
+			<image onErrorType="Icon">
+				<reportElement x="20" y="20" width="91" height="41" uuid="72e62016-c0c6-4e74-9ece-bfecd6c02e7e"/>
+				<imageExpression><![CDATA["/src/main/resources/static/img/title.png"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<columnHeader>
